tests/ui/read-write/embed_extra_attr.stderr
error: fixcol-derive error: Did not expect fixcol attribute on embedded enum variant
  --> tests/ui/read-write/embed_extra_attr.rs:16:13
   |
16 |     Point(#[fixcol(width = 5)] Point),
   |             ^^^^^^
